kubernetes/apps/sample-httpbin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/part-of: sample-httpbin
