kubernetes/apps/sample-httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-httpbin
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-httpbin
    app.kubernetes.io/part-of: sample-httpbin
spec:
  ingressClassName: traefik
  rules:
    - host: httpbin.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-httpbin
                port:
                  number: 80
