kubernetes/apps/sample-httpbin/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-httpbin-default-deny
  namespace: sample-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-httpbin-allow-ingress
  namespace: sample-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sample-httpbin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-httpbin-allow-egress
  namespace: sample-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sample-httpbin
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
